update plp style

--- a/src/plp.html
+++ b/src/plp.html
@@ -1,9 +1,9 @@
 <!-- Liquid SDK -->
 <script type="text/javascript" src="https://sdk.liquidcloud.app/liquid-sdk.js"></script>
-<link rel="stylesheet" href="plp.css">
-<link rel="stylesheet" href="address-popup.css">
-<link rel="stylesheet" href="cart.css">
-<link rel="stylesheet" href="sdk.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/plp.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/address-popup.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/cart.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/sdk.css">
 
 
 <div class="popup-button-wrapper">
@@ -70,8 +70,8 @@
     </div>
 </div>
 
+<script src="https://reservebar-ecom.github.io/sugarlands-sdk/src/sdk.js"></script>
+<script src="https://reservebar-ecom.github.io/sugarlands-sdk/src/cart.js"></script>
+<script src="https://reservebar-ecom.github.io/sugarlands-sdk/src/address-popup.js"></script>
+<script src="https://reservebar-ecom.github.io/sugarlands-sdk/src/plp.js"></script>
 
-<script type="text/javascript" src="sdk.js"></script>
-<script type="text/javascript" src="cart.js"></script>
-<script type="text/javascript" src="address-popup.js"></script>
-<script type="text/javascript" src="plp.js"></script>
