--- a/src/pdp.html
+++ b/src/pdp.html
@@ -1,9 +1,9 @@
 <!-- Liquid SDK -->
 <script type="text/javascript" src="https://sdk.liquidcloud.app/liquid-sdk.js"></script>
-<link rel="stylesheet" href="pdp.css">
-<link rel="stylesheet" href="plp.css">
-<link rel="stylesheet" href="cart.css">
-<link rel="stylesheet" href="address-popup.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/pdp.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/plp.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/cart.css">
+<link rel="stylesheet" href="https://reservebar-ecom.github.io/sugarlands-sdk/src/address-popup.css">
 
 <!-- Carousel  -->
 <link rel="stylesheet"
@@ -256,7 +256,7 @@
     </style>
 </div>
 
-<script type="text/javascript" src="sdk.js"></script>
-<script type="text/javascript" src="cart.js"></script>
-<script type="text/javascript" src="address-popup.js"></script>
-<script type="text/javascript" src="pdp.js"></script>
+<script type="text/javascript" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/sdk.js"></script>
+<script type="text/javascript" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/cart.js"></script>
+<script type="text/javascript" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/address-popup.js"></script>
+<script type="text/javascript" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/pdp.js"></script>
