--- a/src/pdp.html
+++ b/src/pdp.html
@@ -40,12 +40,12 @@
 <!-- PDP content  -->
 <div id="pdp">
     <div class="img">
-        <img id="product-img" src="/assets/loader.gif">
+        <img id="product-img" src="./src/assets/loader.gif">
     </div>
     <div id="product-info">
         <h2 id="product-name"></h2>
         <h3 id="product-unavailability-alert">We're sorry, this product is not at nearby vendors and unavailable to ship to your state.</h3>
-        <img id="product-img-mobile" src="/assets/loader.gif">
+        <img id="product-img-mobile" src="./src/assets/loader.gif">
         <div id="variants">
         </div>
         <div id="engraving">
