fix git reference

--- a/src/pdp.html
+++ b/src/pdp.html
@@ -40,13 +40,13 @@
 <!-- PDP content  -->
 <div id="pdp">
     <div class="img">
-        <img id="product-img" src="./src/assets/loader.gif">
+        <img id="product-img" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/assets/loader.gif">
     </div>
     <div id="product-info">
         <h2 id="product-name"></h2>
         <div id="product-description"></div>
         <h3 id="product-unavailability-alert">We're sorry, this product is not at nearby vendors and unavailable to ship to your state.</h3>
-        <img id="product-img-mobile" src="./src/assets/loader.gif">
+        <img id="product-img-mobile" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/assets/loader.gif">
         <div id="variants">
         </div>
         <div id="engraving">
