add carousel title

--- a/src/pdp.html
+++ b/src/pdp.html
@@ -46,7 +46,7 @@
         <h2 id="product-name"></h2>
         <div id="product-description"></div>
         <h3 id="product-unavailability-alert">We're sorry, this product is not at nearby vendors and unavailable to ship to your state.</h3>
-        <img id="product-img-mobile" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/assets/loader.gif">
+        <img id="product-img-mobile" src="https://reservebar-ecom.github.io/sugarlands-sdk/src/assets/loader2.gif">
         <div id="variants">
         </div>
         <div id="engraving">
@@ -105,7 +105,7 @@
     </div>
     <div id="cart-backdrop"></div>
 </div>
-
+<h2 id="pdp-carousel-title">You may also like</h2>
 <!-- CAROUSEL  -->
 <div id="pdp-carousel" class="owl-carousel owl-theme"></div>
 
